sonarqube-ingress.yaml
 # Ingress для SonarQube — открывает веб-доступ к интерфейсу SonarQube через nginx (nip.io хост)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
spec:
  ingressClassName: nginx
  rules:
  - host: sonarqube.89.223.45.218.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube
            port:
              number: 9000
